--- a/frappe/templates/base.html
+++ b/frappe/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Built on Frappe. https://frappe.io/ -->
+<!-- Powered by ZiNNEE. http://zinnee.com/ -->
 <html lang="en">
 <head>
 	<meta charset="utf-8">
